# routers/router.go
@@ -2,6 +2,7 @@ package routers
 
 import (
 	"SimonBK_Login_APP/api/controllers"
+	"SimonBK_Login_APP/middleware" // Asegúrate de importar tu middleware
 
 	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
@@ -16,9 +17,18 @@ func SetupRouter() *gin.Engine {
 	r.Use(cors.New(config))
 
 	// Rutas para el modelo Usuario
-	auth := r.Group("/appUser")
+	auth := r.Group("/login")
 	{
-		auth.POST("/", controllers.HandleUser)
+		auth.POST("/userApp/", controllers.HandleUser)
 	}
+
+	// Rutas para Usuario aplicación
+	auth = r.Group("/userApp")
+	{
+		// Aplicar el middleware de validación de token solo a este grupo
+		auth.Use(middleware.ValidateTokenMiddleware())
+		auth.POST("/create/", controllers.CreateUserAppController)
+	}
+
 	return r
 }
